토큰 업데이트.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   <div class="meeting_room_status_card">
     <div class="title_box">
       <strong class="title">Meeting Room 01</strong>
-      <span class="tag">회의중</span>
+      <div class="tag">
+        <span>회의중</span>
+      </div>
     </div>
     <div class="info_box">
       <span class="team">VX Design</span>
-      <em class="time">13:30 ~ 16:30</em>
+      <em class="time">13:30~16:30</em>
     </div>
   </div>
 </body>
