커서 테스트.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <title>회의실 예약 메인보드</title>
 </head>
 <body data-theme="light">
-  <div class="meeting_room_status_card">
-    <div class="title_box">
-      <strong class="title">Meeting Room 01</strong>
-      <div class="tag">
+  <div class="meeting-room-status">
+    <div class="meeting-room-status__header">
+      <strong class="meeting-room-status__title">Meeting Room 01</strong>
+      <div class="meeting-room-status__tag">
         <span>회의중</span>
       </div>
     </div>
-    <div class="info_box">
-      <span class="team">VX Design</span>
-      <em class="time">13:30~16:30</em>
+    <div class="meeting-room-status__info">
+      <span class="meeting-room-status__team">VX Design</span>
+      <em class="meeting-room-status__time">13:30~16:30</em>
     </div>
   </div>
 </body>
-</html>
+</html> 
